.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Suite__c.object
<CustomObject>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to match test suites from other platforms.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__File_Path__c</fullName>
        <description>Used to store relative or absolute file paths for test suites that exist as files somewhere else</description>
        <inlineHelpText>Used to store relative or absolute file paths for test suites that exist as files somewhere else</inlineHelpText>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Test_Cases__c</fullName>
        <label>Number of Test Cases</label>
        <summaryForeignKey>provar__Test_Suite_Case__c.provar__Test_Suite__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Parent_Test_Suite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Test Suite</label>
        <referenceTo>provar__Test_Suite__c</referenceTo>
        <relationshipLabel>Child Test Suites</relationshipLabel>
        <relationshipName>Test_Suites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Project</label>
        <referenceTo>provar__Test_Project__c</referenceTo>
        <relationshipLabel>Test Suites</relationshipLabel>
        <relationshipName>Test_Suites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Suite</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Suites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>